# porthole-dectection

./: .gitignore  Pothole_Detection.ipynb  README.md  main.py  pyproject.toml  requirements.txt
lagacy/porthole_alert/: .gitignore  app.py  main.py  test.py
lagacy/porthole_detect/: porthole_detect.ipynb
lagacy/porthole_server/: app.py  streamlit_alert.py  streamlit_app.py
lagacy/porthole_server/legacy/: alert.py  detect.py
porthole_alert/: README.md  app.py  main.py  pyproject.toml  requirements.txt
porthole_detect/: porthole_detect.ipynb
porthole_detect/lagacy/: Pothole_Detection.ipynb
porthole_server/: app.py  detect.py  porthole.db  pyproject.toml  streamlit_alert.py  streamlit_app.py
porthole_server/legacy/html5up-dimension/: index.py
porthole_server/legacy/html5up-dimension/static/assets/js/: index.js
porthole_system/: README.md  main.py  porthole.db  requirements.txt  run_detection.py  test_image_capture.py
porthole_system/backend/: __init__.py  constants.py  crud.py  db.py  logger.py  logic.py  models.py  scheduler.py
porthole_system/backend/api/: alerts.py  car.py  porthole.py
porthole_system/detection/: _porthole_detector.py  config.yaml  config_other.yaml  config_utils.py  main.py  porthole_detector.py  server_api.py  server_api_new.py  update_data_yaml.py
porthole_system/detection/lagacy/: data.yaml  image_processing_legacy.py  main_legacy.py  porthole_detector_backup.py  porthole_detector_backup2.py  server_api_backup.py  (+3 more)
porthole_system/frontend/: app.py
porthole_web/: MapDB.sql  app.py
porthole_web/templates/: index.html
(+15 files in other folders)
