[project]
name = "porthole-dectection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi>=0.115.12",
    "folium>=0.19.5",
    "geopy>=2.4.1",
    "langchain>=0.3.23",
    "langchain-openai>=0.3.13",
    "openai>=1.74.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
    "streamlit-folium>=0.24.1",
    "uvicorn>=0.34.1",
]
