[project]
name = "porthole-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "folium>=0.19.5",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
    "streamlit-folium>=0.24.1",
    "uvicorn>=0.34.0",
]
